--- a/static/styles.css
+++ b/static/styles.css
@@ -66,10 +66,99 @@ header {
     background-color:  rgb(121, 214,231);
 }
 
+#footer{
+    color: rgb(0, 0, 0);
+    background-color: rgb(54, 135, 149);
+    height:50px;
+    font-size: 20px;
+}
+
+#coins{
+    list-style-type: none;
+    padding-left: 10%;
+
+}
+
+#coins li{
+    display:inline;
+}
+
+#ownedCoins{
+    height: 25px;
+    width: 25px;
+}
+
+#kilometers{
+    padding-left: 30%;
+}
+
+#coinstoEarn{
+    list-style-type: none;
+    display:inline;
+    padding-left: 70%;
+}
+
+#coinstoEarn li{
+    display:inline;
+}
+
+#kilometersLeft{
+    padding-left: 90%;
+}
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
-@media (max-width: 575.98px) { 
+/*Medias*/
+@media (max-width: 575.98px) {
+    #kilometers{
+   visibility: hidden;
+}
+
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+   #kilometers{
+       visibility: hidden;
+   }
+}
+
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+#footer{
+   height:70px;
+   font-size:25px;
+}
+
+#ownedCoins{
+   height: 35px;
+   width: 35px;
+}
+ }
+
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+   #footer{
+       height:70px;
+       font-size:25px;
+   }
+
+   #ownedCoins{
+       height: 35px;
+       width: 35px;
+   }
+}
+
+
+@media (min-width: 1200px) {
+   #footer{
+       height:70px;
+       font-size:25px;
+   }
+
+   #ownedCoins{
+       height: 35px;
+       width: 35px;
+   }
 }
 
 
