--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 </header>
 <!--Footer-->
 <footer class="container-fluid fixed-bottom" id="footer">
-    <div class="fixed-bottom">
+    <div class="fixed-bottom" id="Stats">
         <ul id="coins" class="fixed-bottom">
             <li><img src="coins.png" id="ownedCoins"></li>
             <li id="coinAmmount">0</li>
@@ -41,12 +41,12 @@
         <p id="kilometers">0km</p>
     </div>
 
-    <div class="fixed-bottom">
-
+    <div class="fixed-bottom" id="avatar">
+        <img src="avatar.jpg" id="avatarImg">
     </div>
 
-    <div class="fixed-bottom">
-        <ul id="coinstoEarn">
+    <div class="fixed-bottom" id="todoStats">
+        <ul id="coinstoEarn" class="fixed-bottom">
             <li>+<img src="coins.png" id="ownedCoins"></li>
             <li>0</li>
         </ul>
