Add Responsive Footer HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src = "main.js"></script>
-    <link href="static/styles.css" rel="stylesheet">
+    <link href="../static/styles.css" rel="stylesheet">
 </head>
 <body>
 <!--Header-->
@@ -28,7 +28,11 @@
                     </div>
                 </td>
             </tr>
-        </table>        
+        </table>  
+        <div class="form-group has-search" id = "search-engine-mobile">
+            <span class="fa fa-search form-control-feedback"></span>
+            <input type="text" class="form-control" id = "search-engine-input-mobile" placeholder="Search">
+        </div>      
     </div>
 </header>
 <!--Footer-->
