--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,11 @@
                     </div>
                 </td>
             </tr>
-        </table>        
+        </table>  
+        <div class="form-group has-search" id = "search-engine-mobile">
+            <span class="fa fa-search form-control-feedback"></span>
+            <input type="text" class="form-control" id = "search-engine-input-mobile" placeholder="Search">
+        </div>      
     </div>
 </header>
 <!--Footer-->
