--- a/static/styles.css
+++ b/static/styles.css
@@ -154,12 +154,20 @@ border-color: #763626;
    }
    #kilometersLeft{
     visibility: hidden;
+   }
+   #search-engine {
+    visibility: hidden;
+}
+#search-engine-mobile {
+    width: 85%;
+    margin-left: 25px;
+}
 }
 
 #coinstoEarn{
     padding-left: 85%;
 }
-}
+
 
 
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -171,6 +179,27 @@ border-color: #763626;
 #ownedCoins{
    height: 35px;
    width: 35px;
+}
+#search-engine {
+    width: 50%;
+}
+#search-engine-mobile {
+    visibility: hidden;
+}
+#search-engine-input {
+    width: 420px;
+    margin-left: 0px;
+    margin-right: 12px;
+}
+#search-engine {
+    margin-left: 0px; 
+    margin-right: 20px;
+}
+#brand {
+   margin-right: -90px;
+}
+#hikes {
+    margin-left: 70px;
 }
  }
 
@@ -185,6 +214,21 @@ border-color: #763626;
        height: 35px;
        width: 35px;
    }
+   #search-engine-mobile {
+    visibility: hidden;
+}
+#search-engine-input {
+    width: 720px;
+    margin-left: 0px;
+    margin-right: 1px;
+}
+#search-engine {
+    margin-left: -120px; 
+    margin-right: 390px;
+}
+#brand {
+   margin-right: -290px;
+}
 }
 
 
@@ -198,6 +242,10 @@ border-color: #763626;
        height: 35px;
        width: 35px;
    }
+      
+#search-engine-mobile {
+    visibility: hidden;
+}
 }
 
 
