--- a/static/styles.css
+++ b/static/styles.css
@@ -114,7 +114,17 @@ header {
     #kilometers{
    visibility: hidden;
 }
-
+#search-engine {
+    visibility: hidden;
+    margin-left: -450px;
+}
+#search-engine-mobile {
+    width: 85%;
+    margin-left: 25px;
+}
+#brand {
+    margin-right: 0px;
+}
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
@@ -263,5 +273,7 @@ will-change: transform;
 [class*="col-"] {
   padding: 1rem;
 }
+
+
 
 
