--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!--Header-->
-<header class = "navbar-expand-md navbar-light sticky-top">
+<header class = "navbar-expand-md navbar-light sticky-top container-fluid">
     <div class = "container-fluid">
         <table>
             <tr>
@@ -39,19 +39,19 @@
 <footer class="container-fluid fixed-bottom" id="footer">
     <div class="fixed-bottom" id="Stats">
         <ul id="coins" class="fixed-bottom">
-            <li><img src="coins.png" id="ownedCoins"></li>
+            <li><img src="../static/Images/coins.png" id="ownedCoins"></li>
             <li id="coinAmmount">0</li>
         </ul>
         <p id="kilometers">0km</p>
     </div>
 
     <div class="fixed-bottom" id="avatar">
-        <img src="avatar.jpg" id="avatarImg">
+        <img src="../static/Images/avatar.jpg" id="avatarImg">
     </div>
 
     <div class="fixed-bottom" id="todoStats">
         <ul id="coinstoEarn" class="fixed-bottom">
-            <li>+<img src="coins.png" id="ownedCoins"></li>
+            <li>+<img src="../static/Images/coins.png" id="ownedCoins"></li>
             <li>0</li>
         </ul>
         <p id="kilometersLeft">0km left</p>
