Moves map.js to static

--- a/templates/map.html
+++ b/templates/map.html
@@ -24,6 +24,6 @@
     <span class="metadata-marker" style="display: none;" data-region_tag="script-body"></span>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDZSSn0o60aj1fzwtOAkY1Jjpr2YlXSOTY&callback=initMap" async defer></script>
     <script src="https://maps.googleapis.com/maps/api/directions/json?origin=Disneyland&destination=Universal+Studios+Hollywood&key=AIzaSyDZSSn0o60aj1fzwtOAkY1Jjpr2YlXSOTY" async defer></script>
-    <script type="text/javascript" src="map.js"></script>
+    <script type="text/javascript" src="../static/map.js"></script>
   </body>
 </html>
