Add Recommendation List and fix some bugs in User Profile

--- a/static/style-user.css
+++ b/static/style-user.css
@@ -26,6 +26,12 @@
   color:  #336b87;
 }
 
+.achievments {
+  border-top: black 1px solid;
+  border-left: black 1px solid;
+  border-bottom: black 1px solid;
+}
+
 #search-engine {
   display: inline;
   float: right;
