--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,26 @@
     <input type="text" class="form-control" id = "search-engine-input-mobile" placeholder="Search">
 </div>
 <!--map-->
-<div id="map"></div>
+<div id="map">
+    <div class = "container-fluid padding">
+    <div class = "row about text-center">
+        <div class = "col-xs-12 col-sm-3 col-md-3">
+                
+            <div class = "bottom-left">
+                <li id = "hidden-1" href = "#">hidden</li>
+                <h3 id = "recommendations-title">Recommendations List</h3>
+                <ul id = "rec">
+                    <li id = "hidden-2" href = "#">hidden</li>
+                    <a href = "#" class = "nav-link"><li>Recommendation Link</li></a>
+                    <a href = "#" class = "nav-link"><li>Recommendation Link</li></a>
+                    <a href = "#" class = "nav-link"><li>Recommendation Link</li></a>
+                </ul>
+            </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
 <!--Footer-->
 <footer class="container-fluid fixed-bottom" id="footer">
     <div class="fixed-bottom" id="Stats">
@@ -47,7 +66,7 @@
     </div>
 
     <div class="fixed-bottom" id="avatar">
-        <img src="../static/Images/avatar.jpg" id="avatarImg">
+        <a href = "user.html"><img src="../static/Images/avatar.jpg" id="avatarImg"></a>
     </div>
 
     <div class="fixed-bottom" id="todoStats">
